2008-05-03  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* share/rclm2/types/jopen2008_2D/record:
	* share/rclm2/types/jopen2008_2D/setup:
	- added the referee checking operation after game record.

2008-05-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* bin/rclm2.in:
	- fixed a problem of bash.

	* INSTALL:
	* Makefile.in:
	* aclocal.m4:
	* configure:
	* install-sh:
	* missing:
	* share/rclm2/Makefile.am:
	* share/rclm2/Makefile.in:
	* share/rclm2/functions.bash:
	* share/rclm2/types/jopen2008_2D:
	* share/rclm2/types/jopen2008_2D/clearup:
	* share/rclm2/types/jopen2008_2D/record:
	* share/rclm2/types/jopen2008_2D/setup:
	* share/rclm2/types/jopen2008_2D/start:
	* share/rclm2/types/jopen2008_2D/stop:
	* bin/Makefile.in:
	- added new type jopen2008_2D

	* rcg/Makefile.am:
	* rcg/factory.cpp:
	* rcg/handler.h:
	* rcg/parser.h:
	* rcg/parser_v1.cpp:
	* rcg/parser_v2.cpp:
	* rcg/parser_v2.h:
	* rcg/parser_v3.cpp:
	* rcg/parser_v4.cpp:
	* rcg/parser_v4.h:
	* rcg/resultprinter.cpp:
	* rcg/types.h:
	* rcg/util.cpp:
	* rcg/util.h:
	- updated log parser. supported v4 format log.

2008-02-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* bin/rclmscheduler:
	* AUTHORS:
	* bin/Makefile.am:
	* bin/Makefile.in:
	* share/rclm2/schedulers/roundrobin/init:
	- added rclmscheduler as an installed target.

2008-02-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* bin/rclm2.in (Usage):
	- commented out the help message about non-exext script.

	* README:
	- wrote about configuration for the environment and sample
	scripts.

2008-02-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* m4:
	* m4/ax_boost_base.m4:
	* rcg/Makefile.am:
	* rcg/factory.cpp:
	* rcg/factory.h:
	* rcg/gzfstream.cpp:
	* rcg/gzfstream.h:
	* rcg/handler.h:
	* rcg/parser.h:
	* rcg/parser_v1.cpp:
	* rcg/parser_v1.h:
	* rcg/parser_v2.cpp:
	* rcg/parser_v2.h:
	* rcg/parser_v3.cpp:
	* rcg/parser_v3.h:
	* rcg/resultprinter.cpp:
	* rcg/types.h:
	* rcg/util.cpp:
	* rcg/util.h:
	* README:
	* AUTHORS: